@@ -1,5 +1,11 @@
 2011-12-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
+	* fix -w Ae warnings
+	* use an existential hash in the proof-tree record and
+	  link dependencies for instantiated existentials
+
+2011-12-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
 	* more documentation
 	* move to coq trunk
 	  - protocol change: current-goals gets the complete evar
